Feat: Adição da pagina Lançamentos

--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Site de noticias</title>
+  <link rel="stylesheet" href="index.css">
+  <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/158194/isolated/preview/11507ef5615c554fe88fc22c86768501-icone-de-terra-simples.png" type="image/x-icon">
+  <title>Portal Filmes & Séries</title>
 </head>
 <body>
   <header>
+    <h1>Portal Filmes & Séries</h1>
+
     <div class="header-mobile">
     <h1>Portal Filmes & Séries</h1>
-    <img class= "icone-menu" src="assets/menu.svg"Menu_Mobile">
+    <img class="icone-menu" src="./Site_Noticias_Serasa/assets/menu.svg" alt="Menu Mobile">
     </div> 
 
+    <nav>
+      <a href="index.html">Inicío</a>
+      <a href="pagina-filmes.html">Filmes</a>
+      <a href="">Séries</a>
+      <a href="lancamentos.html">Lançamentos</a>
+      <a href="contato.html">Contato</a>
+    </nav>
+    
     <nav class="menu-mobile">
       <a href="index.html">Inicío</a>
       <a href="pagina-filmes.html">Filmes</a>
       <a href="">Séries</a>
-      <a href="">Lançamentos</a>
+      <a href="lancamentos.html">Lançamentos</a>
       <a href="contato.html">Contato</a>
     </nav>
   </header>
@@ -26,7 +36,7 @@
   <main>
     <section class="noticia-principal">
       <img
-        src="assets\download.jpg"
+        src="/Site_Noticias_Serasa/assets/download.jpg"
         alt="Banner da série Breaking Bad">
       <h2>Breaking Bad: O Fenômeno das Séries</h2>
       <p>Considerada uma das melhores séries de todos os tempos, Breaking Bad acompanha a transformação de Walter White,
@@ -36,7 +46,7 @@
 
     <section class="container-noticias">
       <article class="noticia-filme-serie">
-        <img src="assets\images.jpg" alt="Banner em cartoon de Breaking Bad">
+        <img src="/Site_Noticias_Serasa/assets/images.jpg" alt="Banner de Breaking Bad">
         <h3>Breaking Bad: O Fenômeno das Séries</h3>
         <p> Considerada uma das histórias mais impactantes já contadas, 
             esta versão acompanha a jornada de Renato Cariani, um influente educador físico e 
@@ -48,14 +58,14 @@
       </article>
 
       <article class="noticia-filme-serie">
-        <img src="assets\DLGOZ35XcAAUo0i.jpg" alt="Banner de Better Call Saul">
+        <img src="/Site_Noticias_Serasa/assets/DLGOZ35XcAAUo0i.jpg" alt="Banner de Better Call Saul">
         <h3>Better Call Saul: O Advogado Mais Carismático da TV</h3>
         <p>Spin-off de Breaking Bad, a série mostra a origem de Saul Goodman e 
             como ele se tornou o advogado mais excêntrico do universo das séries.</p>
       </article>
 
       <article class="noticia-filme-serie">
-        <img src="assets\0dd8322809f5493fa8c2a8a2bbfe53a1e9960eaab0aac5517296bc9bdfa567ad.jpg" alt="Banner da série The Office">
+        <img src="/Site_Noticias_Serasa/assets/0dd8322809f5493fa8c2a8a2bbfe53a1e9960eaab0aac5517296bc9bdfa567ad.jpg" alt="Banner da série The Office">
         <h3>The Office</h3>
         <p>Considerada uma das comédias mais icônicas da TV, The Office acompanha o dia a dia dos 
           funcionários da Dunder Mifflin, uma empresa de papel na Pensilvânia. 
@@ -71,7 +81,12 @@
   <footer>
     <p>&copy; 2025 Portal Filmes e Séries. Desenvolvido por Matheus Lima </p>
   </footer>
-
-  <script src="main.js"></script>
 </body>
+<script>
+  const iconeMenu = document.querySelector('.icone-menu');
+  const menuAtivo = document.querySelector('.menu-mobile');
+  iconeMenu.addEventListener('click', () => {
+    menuAtivo.classList.toggle('menu-ativo');
+  });
+</script>
 </html>
