Feat:  Corrigindo as rotas do nav

--- a/pagina-filmes.html
+++ b/pagina-filmes.html
@@ -37,7 +37,7 @@
         <a href="index.html">Inicío</a>
         <a href="pagina-filmes.html">Filmes</a>
         <a href="">Séries</a>
-        <a href="">Lançamentos</a>
+        <a href="lancamentos.html">Lançamentos</a>
         <a href="contato.html">Contato</a>
       </nav>
     </header>
@@ -65,7 +65,7 @@
             src="https://i.ebayimg.com/images/g/WfUAAOSw44Zj8lry/s-l1200.jpg"
             alt="Banner em cartoon de Breaking Bad"
           />
-          <h3>O poderoso Chefão Parte II</h3>
+          <h3>O poderoso Chefão Parte 2</h3>
           <p>
             Alternando passado e presente, a sequência mostra a ascensão de um
             jovem Vito Corleone na Sicília e em Nova York, enquanto seu filho
