--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Inicío</a>
       <a href="pagina-filmes.html">Filmes</a>
-      <a href="">Séries</a>
+      <a href="#">Séries</a>
       <a href="lancamentos.html">Lançamentos</a>
       <a href="contato.html">Contato</a>
     </nav>
