Chore: Retirando caminhos absolutos do projeto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="header-mobile">
     <h1>Portal Filmes & Séries</h1>
-    <img class="icone-menu" src="./Site_Noticias_Serasa/assets/menu.svg" alt="Menu Mobile">
+    <img class="icone-menu" src="Site_Noticias_Serasa/assets/menu.svg" alt="Menu Mobile">
     </div> 
 
     <nav>
@@ -36,7 +36,7 @@
   <main>
     <section class="noticia-principal">
       <img
-        src="/Site_Noticias_Serasa/assets/download.jpg"
+        src="Site_Noticias_Serasa/assets/download.jpg"
         alt="Banner da série Breaking Bad">
       <h2>Breaking Bad: O Fenômeno das Séries</h2>
       <p>Considerada uma das melhores séries de todos os tempos, Breaking Bad acompanha a transformação de Walter White,
@@ -46,7 +46,7 @@
 
     <section class="container-noticias">
       <article class="noticia-filme-serie">
-        <img src="/Site_Noticias_Serasa/assets/images.jpg" alt="Banner de Breaking Bad">
+        <img src="Site_Noticias_Serasa/assets/images.jpg" alt="Banner de Breaking Bad">
         <h3>Breaking Bad: O Fenômeno das Séries</h3>
         <p> Considerada uma das histórias mais impactantes já contadas, 
             esta versão acompanha a jornada de Renato Cariani, um influente educador físico e 
@@ -58,14 +58,14 @@
       </article>
 
       <article class="noticia-filme-serie">
-        <img src="/Site_Noticias_Serasa/assets/DLGOZ35XcAAUo0i.jpg" alt="Banner de Better Call Saul">
+        <img src="Site_Noticias_Serasa/assets/DLGOZ35XcAAUo0i.jpg" alt="Banner de Better Call Saul">
         <h3>Better Call Saul: O Advogado Mais Carismático da TV</h3>
         <p>Spin-off de Breaking Bad, a série mostra a origem de Saul Goodman e 
             como ele se tornou o advogado mais excêntrico do universo das séries.</p>
       </article>
 
       <article class="noticia-filme-serie">
-        <img src="/Site_Noticias_Serasa/assets/0dd8322809f5493fa8c2a8a2bbfe53a1e9960eaab0aac5517296bc9bdfa567ad.jpg" alt="Banner da série The Office">
+        <img src="Site_Noticias_Serasa/assets/0dd8322809f5493fa8c2a8a2bbfe53a1e9960eaab0aac5517296bc9bdfa567ad.jpg" alt="Banner da série The Office">
         <h3>The Office</h3>
         <p>Considerada uma das comédias mais icônicas da TV, The Office acompanha o dia a dia dos 
           funcionários da Dunder Mifflin, uma empresa de papel na Pensilvânia. 
