Style: Correção de titulo de um filme

--- a/lancamentos.html
+++ b/lancamentos.html
@@ -94,7 +94,7 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmKFi7EpHvkB9ZiXZcwvJ2aRXYCi5Fu_pvMW-0c_Q9QwdXYNNQ"
             alt="Banner de F1"
           />
-          <h3>Spider-Man Home Coming</h3>
+          <h3>F1 o filme</h3>
           <p>
             Sonny Hayes foi a grande promessa da Fórmula 1 nos anos 90 — até um
             acidente devastador pôr fim à sua carreira. Trinta anos depois,
